dao terminado y db

--- a/src/main/resources/applicationconfig.properties
+++ b/src/main/resources/applicationconfig.properties
@@ -1,10 +1,8 @@
-# To change this license header, choose License Headers in Project Properties.
-# To change this template file, choose Tools | Templates
-# and open the template in the editor.
 dao=mybatis
-url=
-driver=
-user=
-pwd=
-#par\u00e1metros para los DAOS de MyBATIS
-mybatis-config-file=
+#par\u00e1metros para los DAOs de JDBC
+url=jdbc:mysql://desarrollo.is.escuelaing.edu.co:3306/bdprueba
+driver=com.mysql.jdbc.Driver
+user=bdprueba
+pwd=bdprueba
+#par\u00e1metros para los DAOs de MyBATIC
+config=mybatis-config.xml
