--- a/src/main/resources/applicationconfig.properties
+++ b/src/main/resources/applicationconfig.properties
@@ -1,8 +1,8 @@
 dao=mybatis
 #par\u00e1metros para los DAOs de JDBC
-url=jdbc:mysql://desarrollo.is.escuelaing.edu.co:3306/bdprueba
+url=jdbc:mysql://desarrollo.is.escuelaing.edu.co:3306/pdsw01
 driver=com.mysql.jdbc.Driver
-user=bdprueba
-pwd=bdprueba
+user=pdsw01
+pwd=pdswgr101
 #par\u00e1metros para los DAOs de MyBATIC
 config=mybatis-config.xml
